# douban2soul

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  main.py  pyproject.toml
docs/: PRD.md  README.md  requirements_and_selection.md
scripts/: analysis_engine.py  llm_client.py  metadata_fetcher.py
src/douban2soul/: __init__.py  cli.py
src/douban2soul/analysis/: __init__.py  llm_client.py  profiler.py
src/douban2soul/scraping/: __init__.py  batch.py  cache.py  metadata.py  records.py
src/douban2soul/scraping/adapters/: __init__.py  base.py  fallback.py  opencli.py  wmdb.py
src/douban2soul/statistics/: __init__.py  categories.py  engine.py  merge.py  taxonomy.py
tests/: test_llm_client.py  test_opencli_adapter.py  test_scraping.py  test_statistics.py  test_wmdb_retry.py
