[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "douban2soul"
version = "0.1.0"
description = "Personality profiling tool based on Douban movie viewing records"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Douban2Soul Contributors"}
]
keywords = ["douban", "movie", "personality", "analysis", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "dashscope>=1.14.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jieba>=0.42.1",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
douban2soul = "douban2soul.cli:main"

[project.urls]
Homepage = "https://github.com/ykfnxx/douban2soul"
Repository = "https://github.com/ykfnxx/douban2soul"
Issues = "https://github.com/ykfnxx/douban2soul/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/douban2soul"]

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
